# portfolios-business-intelligence-data-analysis

./: .gitignore  COMMIT_GUIDELINES.md  README.md  portfolios-business-intelligence-data-analysis.code-workspace
.github/: copilot-instructions.md
portfolio-nosql-database/: Makefile  README.md  config.mk  docker-compose.yml  main.py  markdown-pdf.css  pyproject.toml
portfolio-nosql-database/css/: custom-github-markdown-light.css  custom-github-markdown.css
portfolio-nosql-database/css/archive/: extra.css  github-markdown-dark.css  github-markdown.css  markdown-pdf.css
portfolio-nosql-database/docs/: README.html  Relatório de Aula Prática - Bancos de Dados Não Relacionais.md  URL_MAPPING.md  _README.md
portfolio-nosql-database/querys/: db-vendas-aggregate-produtos-distintos.js  db-vendas-distinct-produtos.js  db-vendas-find-all.js  db-vendas-find-marcos-compras.js  db-vendas-find-maria.js  db-vendas-find-vips.js  db-vendas-insertMany.js  db-vendas-update-joao-compras.js  db-vendas-update-joao-endereco.js  db-vendas-update-marcos-compras.js  db-vendas-update-marcos-endereco.js  db-vendas-update-maria-compras.js  db-vendas-update-maria-endereco.js
portfolio-nosql-database/src/: codeblock_extractor.py  markdown_pdf.py
portfolio-nosql-database/src/core/: logger.py
portfolio-web-analytics/: .pre-commit-config.yaml  Makefile  README.md  config.mk  main.py  pyproject.toml  requirements.txt  validation.py
portfolio-web-analytics/.github/: copilot-instructions.md
portfolio-web-analytics/data/: pipeline_results.json
portfolio-web-analytics/data/datasets/: anime.csv
portfolio-web-analytics/data/html/: 25986929-goodnight-punpun-omnibus-vol-1.html  goodreads_books_full_clean.html  search_results.html
portfolio-web-analytics/data/output/: pipeline_results.json
portfolio-web-analytics/examples/: __init__.py  goodreads_examples.py  goodreads_parser_example.py  goodreads_scraper_example.py  kaggle_dataset_provider_example.py  kaggle_examples.py  parser_examples.py  python_path.py
portfolio-web-analytics/jupyter/: manga-dataset.ipynb  pathfix.py
portfolio-web-analytics/src/common/: __init__.py  echo.py  logger.py  utils.py
portfolio-web-analytics/src/common/base/: base_class.py
portfolio-web-analytics/src/common/errors/: errors.py
portfolio-web-analytics/src/common/utils/: __init__.py  clean_repository.py
portfolio-web-analytics/src/config/: __init__.py  constants.py  constypes.py  parser.yaml  settings.yaml  settings_manager.py
portfolio-web-analytics/src/config/files/: parser.yaml  settings.yaml
portfolio-web-analytics/src/core/: base_class.py  errors.py
portfolio-web-analytics/src/enums/: __init__.py  operation_types.py
portfolio-web-analytics/src/infrastructure/datasources/: __init__.py  goodreads_parser.py  goodreads_scraper.py  kaggle_dataset_provider.py
portfolio-web-analytics/src/interfaces/: __init__.py  idataset.py  ilogger.py
portfolio-web-analytics/src/pipeline/: __init__.py  web_analytics_pipeline.py
portfolio-web-analytics/src/repositories/: __init__.py  clean_repository.py  config_repository.py  goodreads.py  goodreads_repository.py  html_downloader.py  kaggle_downloader.py  kaggle_repository.py  parser_repository.py
portfolio-web-analytics/temp/: validation.py
tools/: commit.txt
